second lecture completed

--- a/inception/index.html
+++ b/inception/index.html
@@ -22,15 +22,12 @@
         // body.appendChild(h1);
     </script> -->
     </div>
-
-    <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
-    <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
     <!-- Done through react -->
     <!-- <script>
         const heading = React.createElement("h1", {}, "Hello World");
         const root = ReactDOM.createRoot(document.getElementById("root"));
         root.render(heading);
     </script> -->
-    <script src="App.js"></script>
+    <script type = "module" src="App.js"></script>
 </body>
 </html>
