--- a/index.html
+++ b/index.html
@@ -1,20 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link href='https://fonts.googleapis.com/css?family=Sacramento' rel='stylesheet'>
-    <link rel="stylesheet" href="index.css">
-</head>
-<body>
+    <link
+      href="https://fonts.googleapis.com/css?family=Sacramento"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="index.css" />
+  </head>
+  <body>
     <div>
-        <h1>What if I do this?</h1>
+      <!-- <h1>What if I do this?</h1> -->
     </div>
     <div id="root">
-        <h1>Hi, Pratik Here!</h1> <!-- This will be replaced-->
-    <!-- <h1>Hello World</h1> Done through HTML--> 
-    <!-- <script>
+      <h1>Hi, Pratik Here!</h1>
+      <!-- This will be replaced-->
+      <!-- <h1>Hello World</h1> Done through HTML-->
+      <!-- <script>
         // Done through JavaScript
         // const body = document.querySelector('body');
         // const h1 = document.createElement('h1');
@@ -28,6 +32,6 @@
         const root = ReactDOM.createRoot(document.getElementById("root"));
         root.render(heading);
     </script> -->
-    <script type = "module" src="App.js"></script>
-</body>
+    <script type="module" src="App.js"></script>
+  </body>
 </html>
